# study-boring

./: LICENSE  README.md  app.py  pyproject.toml
templates/: home.html  style.css
